# wolf

./: Cargo.toml  README.md  go.mod  main.go
ast/: ast.go  ast_test.go
evaluator/: evaluator.go  evaluator_test.go
example/: temp.wl  test.wl
lexer/: lexer.go  lexer_test.go
monkey_go/: main.go
monkey_go/evaluator/: builtins.go  evaluator.go  evaluator_test.go
monkey_go/lexer/: lexer.go  lexer_test.go
monkey_go/object/: object.go
monkey_go/parser/: parser.go
object/: object.go
parser/: parser.go  parser_test.go
repl/: repl.go
src/: main.rs
src/cli/: command.rs  mod.rs
src/grammar/: wolf.pest
